--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 </head>
 <body>
   <header>
-    <h1>CV. Anugrah Pinrang</h1>
-    <p>Distributor Makanan | Sehat - Aman - Terpercaya</p>
+    <h1>LinkPro</h1>
+    <p>PARTNER BISNIS | Aman - Terpercaya</p>
     <a href="#contact" class="btn">Hubungi Kami</a>
   </header>
 
