--- a/index.html
+++ b/index.html
@@ -3,26 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Company Profile</title>
+  <title>LinkPro - Business Consultant Surabaya</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
     }
     header {
-      background: #ff6b00;
+      background: url('https://images.unsplash.com/photo-1521790361267-1c3c72b0e68f?auto=format&fit=crop&w=1400&q=80') no-repeat center center/cover;
       color: white;
-      padding: 2rem;
+      padding: 80px 20px;
       text-align: center;
+      position: relative;
+    }
+    header::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.6);
+    }
+    header .content {
+      position: relative;
+      z-index: 1;
+    }
+    header img {
+      max-width: 120px;
+      margin-bottom: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 42px;
+    }
+    header p {
+      font-size: 18px;
+      margin-top: 10px;
     }
     nav {
-      background: #333;
-      color: white;
-      display: flex;
-      justify-content: center;
-      padding: 0.5rem;
+      background: #222;
+      padding: 15px;
+      text-align: center;
     }
     nav a {
       color: white;
@@ -31,93 +54,121 @@
       font-weight: bold;
     }
     nav a:hover {
-      color: #ff6b00;
+      color: #ff9900;
     }
     section {
-      padding: 2rem;
+      padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
     }
-    .services {
+    h2 {
+      color: #ff6600;
+      margin-bottom: 20px;
+    }
+    .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
+      gap: 20px;
     }
     .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1.5rem;
-      text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     footer {
+      background: #222;
+      color: white;
       text-align: center;
-      background: #333;
-      color: white;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    .btn {
-      display: inline-block;
-      background: #ff6b00;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .btn:hover {
-      background: #e65c00;
+      padding: 20px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>LinkPro</h1>
-    <p>PARTNER BISNIS | Aman - Terpercaya</p>
-    <a href="#contact" class="btn">Hubungi Kami</a>
+    <div class="content">
+      <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/120/external-business-consulting-agile-flaticons-lineal-color-flat-icons.png" alt="Logo LinkPro">
+      <h1>LinkPro</h1>
+      <p>Business Consultant | Food & Non-Food Distribution | Surabaya</p>
+      <p><em>"Membangun Distribusi, Menguatkan Bisnis"</em></p>
+    </div>
   </header>
 
   <nav>
-    <a href="#about">Tentang</a>
-    <a href="#services">Layanan</a>
-    <a href="#contact">Kontak</a>
+    <a href="#tentang">Tentang</a>
+    <a href="#layanan">Layanan</a>
+    <a href="#keunggulan">Keunggulan</a>
+    <a href="#kontak">Kontak</a>
   </nav>
 
-  <section id="about">
+  <section id="tentang">
     <h2>Tentang Kami</h2>
     <p>
-      CV. Anugrah Pinrang adalah distributor makanan yang menyediakan produk berkualitas tinggi 
-      dengan pelayanan terbaik. Kami berkomitmen untuk terus tumbuh dan memberikan manfaat bagi mitra bisnis.
+      <b>LinkPro</b> adalah perusahaan konsultan bisnis yang berbasis di Kota Surabaya,
+      berfokus pada pengembangan dan optimalisasi distribusi <b>FMCG (Fast Moving Consumer Goods)</b>,
+      baik produk food maupun non-food. 
+    </p>
+    <p>
+      Kami membantu mitra bisnis dalam merancang strategi distribusi, memperkuat rantai pasok, 
+      serta meningkatkan efisiensi operasional agar perusahaan dapat tumbuh berkelanjutan 
+      dan memenangkan persaingan pasar.
     </p>
   </section>
 
-  <section id="services">
+  <section id="layanan">
     <h2>Layanan Kami</h2>
-    <div class="services">
+    <div class="grid">
       <div class="card">
-        <h3>Distribusi Cepat</h3>
-        <p>Pengiriman tepat waktu ke seluruh wilayah.</p>
+        <h3>Konsultasi Bisnis Distribusi</h3>
+        <p>Menyusun strategi distribusi food & non-food yang efisien, sesuai kebutuhan pasar.</p>
       </div>
       <div class="card">
-        <h3>Produk Berkualitas</h3>
-        <p>Hanya menyediakan produk makanan terbaik dan aman.</p>
+        <h3>Manajemen Supply Chain</h3>
+        <p>Optimasi rantai pasok dari produsen hingga ke retail modern maupun tradisional.</p>
       </div>
       <div class="card">
-        <h3>Kemitraan Luas</h3>
-        <p>Bekerja sama dengan berbagai brand ternama di Indonesia.</p>
+        <h3>Market Research & Analisis</h3>
+        <p>Studi pasar untuk menemukan peluang baru dalam penetrasi distribusi FMCG.</p>
+      </div>
+      <div class="card">
+        <h3>Digitalisasi Distribusi</h3>
+        <p>Membantu integrasi teknologi dalam monitoring distribusi & laporan penjualan.</p>
       </div>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="keunggulan">
+    <h2>Keunggulan Kami</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Berpengalaman</h3>
+        <p>Tim ahli dengan pengalaman di industri distribusi FMCG lebih dari 10 tahun.</p>
+      </div>
+      <div class="card">
+        <h3>Solusi Tepat Sasaran</h3>
+        <p>Strategi yang disesuaikan dengan kebutuhan spesifik bisnis klien.</p>
+      </div>
+      <div class="card">
+        <h3>Jaringan Luas</h3>
+        <p>Koneksi yang kuat dengan produsen, distributor, dan retail modern di Indonesia.</p>
+      </div>
+      <div class="card">
+        <h3>Inovatif & Modern</h3>
+        <p>Menggunakan pendekatan digital untuk distribusi yang lebih efektif.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="kontak">
     <h2>Kontak Kami</h2>
-    <p>Email: <a href="mailto:info@anugrahpinrang.com">info@anugrahpinrang.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
+    <p>Email: <a href="mailto:info@linkpro.co.id">info@linkpro.co.id</a></p>
+    <p>Telepon: +62 81216807499</p>
+    <p>Alamat: Surabaya, Jawa Timur, Indonesia</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 CV. Anugrah Pinrang. All Rights Reserved.</p>
+    <p>&copy; 2025 LinkPro | Business Consultant Distribusi</p>
   </footer>
 </body>
 </html>
