--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
   <header>
     <div class="content">
-      <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/120/external-business-consulting-agile-flaticons-lineal-color-flat-icons.png" alt="Logo LinkPro">
+      <img src="logo.png" alt="Logo LinkPro">
       <h1>LinkPro</h1>
       <p>Business Consultant | Food & Non-Food Distribution | Surabaya</p>
       <p><em>"Membangun Distribusi, Menguatkan Bisnis"</em></p>
