--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
   <header>
     <div class="content">
-      <img src="logo.png" alt="Logo LinkPro">
+      <img src="Logo.png" alt="Logo LinkPro" class="logo">
       <h1>LinkPro</h1>
       <p>Business Consultant | Food & Non-Food Distribution | Surabaya</p>
       <p><em>"Membangun Distribusi, Menguatkan Bisnis"</em></p>
@@ -162,7 +162,7 @@
 
   <section id="kontak">
     <h2>Kontak Kami</h2>
-    <p>Email: <a href="mailto:info@linkpro.co.id">info@linkpro.co.id</a></p>
+    <p>Email: <a href="mailto:mbt.putra2025@gmail.com">mbt.putra2025@gmail.com</a></p>
     <p>Telepon: +62 81216807499</p>
     <p>Alamat: Surabaya, Jawa Timur, Indonesia</p>
   </section>
